src/_theme.scss
@use "sass:math";

$brand: $blue;

:root,
.theme-dark,
.theme-light,
// this changes the "create a server popout"
div[class^="layerContainer"] {
	--background-primary: #{$base};
	--background-secondary: #{$mantle};
	--background-secondary-alt: #{$mantle};
	--background-tertiary: #{$crust};
	--background-accent: #{$brand};

	--background-floating: #{darken($base, 3%)};
	--background-mentioned: #{adjust-color($brand, $alpha: -0.8)};
	--background-mentioned-hover: #{adjust-color($brand, $alpha: -0.85)};
	--background-modifier-accent: #{adjust-color($brand, $alpha: -0.75)};
	--background-modifier-active: #{adjust-color($text, $alpha: -0.84)};
	--background-modifier-hover: #{adjust-color($brand, $alpha: -0.92)};
	--background-modifier-selected: #{adjust-color($brand, $alpha: -0.76)};

	--activity-card-background: #{$base};
	--interactive-normal: #{$text};
	--interactive-muted: #{adjust-color($text, $alpha: -0.7)};
	--interactive-hover: #{$text};
	--interactive-active: #{$text};
	--channels-default: #{$subtext0};
	--channeltextarea-background: #{$mantle};

	--input-background: #{$crust};
	--modal-background: #{$base};

	--button-positive-background: #{$green};
	--button-positive-background-hover: #{darken($green, 10%)};
	--button-secondary-background: #{$brand};
	--button-secondary-background-disabled: #{$crust};

	--rs-online-color: #{$green};
	--rs-idle-color: #{$peach};
	--rs-dnd-color: #{$red};
	--rs-offline-color: #{$overlay0};
	--rs-invisible-color: #{$rosewater};
	--rs-streaming-color: #{$mauve};

	--button-danger-background: #{$red};
	--info-danger-background: #{$red};
	--info-danger-foreground: #{$text};
	--status-danger-background: #{$red};
	--status-danger-text: #{$text};
	--status-danger: #{$red};
	--status-warning: #{$peach};

	--info-warning-background: #{$peach};
	--info-warning-foreground: #{$text};
	--status-warning-background: #{$peach};

	--status-positive-background: #{$green};
	--status-positive-text: #{$text};
	--status-positive: #{$green};

	--header-primary: #{$text};
	--header-secondary: #{darken($text, 6%)};
	--text-normal: #{$text};
	--text-muted: #{$subtext0};
	--text-link: #{$blue};
	--text-link-low-saturation: #{$sapphire};
	--text-positive: #{$green};
	--text-warning: #{$peach};
	--text-danger: #{$red};
	--text-brand: #{$brand};

	// not sure about these, might be TODO
	--info-positive-text: #fff;
	--info-warning-text: #fff;
	--info-danger-text: #fff;
	--info-help-text: #fff;
	--info-help-background: hsla(
		212,
		calc(var(--saturation-factor, 1) * 100%),
		43.9%,
		0.1
	);
	--info-help-foreground: hsl(
		212,
		calc(var(--saturation-factor, 1) * 100%),
		43.9%
	);

	// weighted brand colors
	--brand-experiment: #{$brand};
	--brand-experiment-100: #{lighten($brand, math.div(90%, 2))};
	--brand-experiment-130: #{lighten($brand, math.div(85%, 2))};
	--brand-experiment-160: #{lighten($brand, math.div(80%, 2))};
	--brand-experiment-200: #{lighten($brand, math.div(75%, 2))};
	--brand-experiment-230: #{lighten($brand, math.div(70%, 2))};
	--brand-experiment-260: #{lighten($brand, math.div(65%, 2))};
	--brand-experiment-300: #{lighten($brand, math.div(60%, 2))};
	--brand-experiment-330: #{lighten($brand, math.div(50%, 2))};
	--brand-experiment-360: #{lighten($brand, math.div(40%, 2))};
	--brand-experiment-400: #{lighten($brand, math.div(30%, 2))};
	--brand-experiment-430: #{lighten($brand, math.div(20%, 2))};
	--brand-experiment-460: #{lighten($brand, math.div(10%, 2))};
	--brand-experiment-500: #{$brand};
	--brand-experiment-530: #{darken($brand, math.div(10%, 2))};
	--brand-experiment-560: #{darken($brand, math.div(20%, 2))};
	--brand-experiment-600: #{darken($brand, math.div(30%, 2))};
	--brand-experiment-630: #{darken($brand, math.div(40%, 2))};
	--brand-experiment-660: #{darken($brand, math.div(50%, 2))};
	--brand-experiment-700: #{darken($brand, math.div(60%, 2))};
	--brand-experiment-730: #{darken($brand, math.div(65%, 2))};
	--brand-experiment-760: #{darken($brand, math.div(70%, 2))};
	--brand-experiment-800: #{darken($brand, math.div(75%, 2))};
	--brand-experiment-830: #{darken($brand, math.div(80%, 2))};
	--brand-experiment-860: #{darken($brand, math.div(85%, 2))};
	--brand-experiment-900: #{darken($brand, math.div(90%, 2))};
	// similar to other brand colors, except alpha only
	--brand-experiment-05a: #{adjust-color($brand, $alpha: -0.95)};
	--brand-experiment-10a: #{adjust-color($brand, $alpha: -0.9)};
	--brand-experiment-15a: #{adjust-color($brand, $alpha: -0.85)};
	--brand-experiment-20a: #{adjust-color($brand, $alpha: -0.8)};
	--brand-experiment-25a: #{adjust-color($brand, $alpha: -0.75)};
	--brand-experiment-30a: #{adjust-color($brand, $alpha: -0.7)};
	--brand-experiment-35a: #{adjust-color($brand, $alpha: -0.65)};
	--brand-experiment-40a: #{adjust-color($brand, $alpha: -0.6)};
	--brand-experiment-45a: #{adjust-color($brand, $alpha: -0.55)};
	--brand-experiment-50a: #{adjust-color($brand, $alpha: -0.5)};
	--brand-experiment-55a: #{adjust-color($brand, $alpha: -0.45)};
	--brand-experiment-60a: #{adjust-color($brand, $alpha: -0.4)};
	--brand-experiment-65a: #{adjust-color($brand, $alpha: -0.35)};
	--brand-experiment-70a: #{adjust-color($brand, $alpha: -0.3)};
	--brand-experiment-75a: #{adjust-color($brand, $alpha: -0.25)};
	--brand-experiment-80a: #{adjust-color($brand, $alpha: -0.2)};
	--brand-experiment-85a: #{adjust-color($brand, $alpha: -0.15)};
	--brand-experiment-90a: #{adjust-color($brand, $alpha: -0.1)};
	--brand-experiment-95a: #{adjust-color($brand, $alpha: -0.05)};

	// scrollbars
	--scrollbar-thin-thumb: #{$brand};
	--scrollbar-thin-track: #{$crust};
	--scrollbar-auto-thumb: #{$brand};
	--scrollbar-auto-track: #{$mantle};
	--scrollbar-auto-scrollbar-color-track: #{$brand};
	--scrollbar-auto-scrollbar-color-thumb: #{$mantle};

	--status-warning-text: hotpink;
}

// online state
rect[mask="url(#svg-mask-status-online)"] {
	fill: $green !important;
}
rect[mask="url(#svg-mask-status-idle)"] {
	fill: $peach !important;
}
/* ... */

